# gpa_calc

./: CMakeLists.txt
include/: course.h  courseFactory.h  mainmenu.h  student.h  studentFactory.h
includes/: student.h
src/: course.h  main.cpp  student.h
